--- a/templates/host_tournament.html
+++ b/templates/host_tournament.html
@@ -30,21 +30,32 @@
      {{ form.match_type|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
 
      <!-- New fields -->
-     <div>
-         {{ form.is_paid.label_tag }}
-         {{ form.is_paid }}
-     </div>
-     <div>
-         {{ form.price.label_tag }}
-         {{ form.price|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
-     </div>
-     <div>
-         {{ form.is_public.label_tag }}
-         {{ form.is_public }}
-     </div>
 
-     {{ form.players.label_tag }}
-     {{ form.players|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
+   <div>
+     {{ form.is_paid.label_tag }}
+     {{ form.is_paid }}
+   </div>
+   <div>
+     {{ form.price.label_tag }}
+     {{ form.price|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
+   </div>
+   <div>
+     {{ form.is_public.label_tag }}
+     {{ form.is_public }}
+   </div>
+
+   <div>
+     {{ form.is_active.label_tag }}
+     {{ form.is_active }}
+   </div>
+
+   <div>
+     {{ form.registration_deadline.label_tag }}
+     {{ form.registration_deadline|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
+   </div>
+
+   {{ form.players.label_tag }}
+   {{ form.players|add_class:"w-full p-2 rounded bg-gray-800 text-white border border-gray-600 focus:ring-2 focus:ring-orange-500" }}
 
 
      <button type="submit" class="w-full py-3 px-6 rounded bg-orange-600 hover:bg-orange-700 transition font-semibold text-white shadow-md">
