--- a/templates/home.html
+++ b/templates/home.html
@@ -85,11 +85,11 @@
      <h1 class="text-5xl font-bold mb-4">Welcome to TournifyX</h1>
      <p class="text-lg text-white/80 mb-8">Manage your tournaments like a pro.</p>
      <!-- New Tournament Button -->
-     <a href="{% url 'host_tournament' %}" class="mt-6 px-8 py-3 bg-orange-600 hover:bg-orange-700 text-white font-semibold rounded-lg transition duration-300 shadow-lg inline-block">
+     <a href="{% url 'host_tournament' %}" class="mt-6 px-8 py-3 bg-red-700 hover:bg-red-600 text-white font-semibold rounded-lg transition duration-300 shadow-lg inline-block">
        Create a Tournament
      </a>
      <!-- Join Tournament Button -->
-     <a href="{% url 'join_tournament' %}" class="mt-6 ml-4 px-8 py-3 bg-green-600 hover:bg-green-700 text-white font-semibold rounded-lg transition duration-300 shadow-lg inline-block">
+     <a href="{% url 'join_tournament' %}" class="mt-6 ml-4 px-8 py-3 bg-yellow-600 hover:bg-yellow-700 text-white font-semibold rounded-lg transition duration-300 shadow-lg inline-block">
        Join a Tournament
      </a>
    </div>
