--- a/templates/about.html
+++ b/templates/about.html
@@ -70,6 +70,25 @@
              <i class="fab fa-facebook-f"></i>
            </a>
          </div>
+       </div> 
+       <!-- User 4 -->
+       <div class="block text-center">
+         <a href="https://github.com/MahinChowdhury25" target="_blank">
+           <div class="w-72 h-72 mx-auto bg-gray-700 rounded-lg overflow-hidden">
+             <img src="{% static 'images/Mahin.jpg' %}" alt="Shoshi Khan" class="w-full h-full object-cover">
+           </div>
+         </a>
+         <p class="mt-4 text-lg text-gray-300">Siddatul Muntaha Chowdhury Mahin</p>
+         <div class="flex justify-center space-x-4 mt-4">
+           <!-- GitHub Button -->
+           <a href="https://github.com/MahinChowdhury25" target="_blank" class="inline-flex items-center justify-center w-12 h-12 bg-orange-300 text-white rounded-full hover:bg-orange-600">
+             <img src="{% static 'images/github.png' %}" alt="GitHub Logo" class="w-6 h-6">
+           </a>
+           <!-- Facebook Button -->
+           <a href="https://www.facebook.com/TerrorMaNN" target="_blank" class="inline-flex items-center justify-center w-12 h-12 bg-orange-300 text-white rounded-full hover:bg-orange-600">
+             <i class="fab fa-facebook-f"></i>
+           </a>
+         </div>
        </div>
      </div>
    </div>
