--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
        Whether you're hosting or joining, TournifyX makes the process seamless and enjoyable.
      </p>
      <h2 class="text-4xl font-semibold mb-4 text-orange-500">Meet The Creators</h2>
-     <p class="text-2xl font-bold text-orange-500 mb-8">TripleSync</p>
+     <p class="text-2xl font-bold text-orange-500 mb-8">QuadrupleSync</p>
      <div class="grid grid-cols-1 sm:grid-cols-3 gap-10">
        <!-- User 1 -->
        <div class="block text-center">
