--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="min-h-screen flex items-center justify-center px-4" style="background-image: url('{% static "images/bg2.png" %}'); background-size: cover; background-position: center;">
- <div class="bg-black bg-opacity-75 text-white p-16 rounded-lg shadow-lg max-w-6xl">
+ <div class="bg-black bg-opacity-75 text-white p-16 rounded-lg shadow-lg max-w-full">
    <div class="text-center">
      <h1 class="text-5xl font-bold mb-6 text-orange-500">About TournifyX</h1>
      <p class="text-lg text-gray-300 mb-8">
@@ -12,8 +12,8 @@
        Whether you're hosting or joining, TournifyX makes the process seamless and enjoyable.
      </p>
      <h2 class="text-4xl font-semibold mb-4 text-orange-500">Meet The Creators</h2>
-     <p class="text-2xl font-bold text-orange-500 mb-8">QuadrupleSync</p>
-     <div class="grid grid-cols-1 sm:grid-cols-3 gap-10">
+     <p class="text-2xl font-bold text-orange-500 mb-8">QuadSync</p>
+     <div class="grid grid-cols-1 sm:grid-cols-4 gap-20 justify-start">
        <!-- User 1 -->
        <div class="block text-center">
          <a href="https://github.com/zubaerturjo" target="_blank">
