--- a/templates/join_tournament.html
+++ b/templates/join_tournament.html
@@ -12,9 +12,9 @@
     <!-- Right Panel (Form + Content) -->
     <div class="relative w-full md:w-1/2 p-10 flex flex-col justify-center items-center bg-black/50 overflow-y-auto">
       <!-- Logo Top Middle -->
-      <img src="{% static 'images/logo.png' %}" alt="Logo" class="absolute top-8 left-1/2 -translate-x-1/2 w-24 md:w-32">
+      <img src="{% static 'images/logo.png' %}" alt="Logo" class="absolute top-8 left-1/2 -translate-x-1/2 w-24 md:w-32 mb-12">
 
-      <div class="flex-1 flex flex-col justify-center items-center w-full">
+      <div class="flex-1 flex flex-col justify-center items-center w-full mt-40">
         {% if messages %}
           <div class="mb-4 w-full">
             {% for message in messages %}
