--- a/templates/user_tournaments.html
+++ b/templates/user_tournaments.html
@@ -90,9 +90,7 @@
     `;
     document.head.appendChild(style);
 
-    // Fade in after 2.8 seconds
-    setTimeout(function() {
-        document.getElementById('tournament-panel').classList.add('show');
-    }, 2800);
+    // Fade in immediately
+    document.getElementById('tournament-panel').classList.add('show');
 </script>
 {% endblock %}
